--- a/files/index.html
+++ b/files/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="1; url=https://drive.google.com/drive/u/1/folders/1FfAdieWKSc9TQPoCtWKg9Gixd2B4akUC">
+<meta http-equiv="Refresh" content="1; url=https://drive.google.com/open?id=1W9Slp9Qpl16rY4wdTH7tcSLC1MBRp8Pb">
