added live schedule

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
         <div class="patternbackground" id="schedule">
             <h2 id="schedule">Schedule</h2>
 
-            <div style="height: 1000px">
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOUEaFGaT3anNAbkoC5IcJNzdslPmo5a7S6BjW3Vf4Ibwpi3SqMCiaroTvdrdlZeresyF6tOX6rdMr/pubhtml?gid=760596939
-                            &amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+            <div style="height: 100vh; display: flex; justify-content: center;">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOUEaFGaT3anNAbkoC5IcJNzdslPmo5a7S6BjW3Vf4Ibwpi3SqMCiaroTvdrdlZeresyF6tOX6rdMr/pubhtml?widget=true&amp;headers=false" width="80%"></iframe>
             </div>
 
             <center><p class="desc">See button below to expand a detailed schedule.</p></center>
