--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="1; url=https://docs.google.com/spreadsheets/d/15rIqBAlNmtAxPdoHKQhnw3Sx7ynk3S4C8r2SvQ2pOTw/edit?usp=sharing">
+<meta http-equiv="Refresh" content="1; url=https://docs.google.com/spreadsheets/d/e/2PACX-1vSOUEaFGaT3anNAbkoC5IcJNzdslPmo5a7S6BjW3Vf4Ibwpi3SqMCiaroTvdrdlZeresyF6tOX6rdMr/pubhtml?widget=true&amp;headers=false">
