Switch using classes for sections to ids

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<!--<a href="./photos">Photos</a>-->
 		</nav>
 
-        <section class="section1">
+        <section id="section1" class="patternbackground">
         
             <div id="header">
                 <img id="logo" src="hack-stl-logo_white.svg">
@@ -101,7 +101,7 @@
             </div>
         </section>
         
-        <section class="section2">
+        <section id="section2" class="whitebackground">
             <div style="display: flex; justify-content: center;">
                 <img src="./img/HackSTLSchedule.png" />
                 <!--<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSOUEaFGaT3anNAbkoC5IcJNzdslPmo5a7S6BjW3Vf4Ibwpi3SqMCiaroTvdrdlZeresyF6tOX6rdMr/pubhtml?widget=true&amp;headers=false" width="80%"></iframe>-->
@@ -118,7 +118,7 @@
 
         </section>
 
-        <section class="section3">
+        <section id="section3" class="patternbackground">
 
             <div id="map" class="centered">
                 <h1 style="font-size: 2.5rem; color: white;">Event Map</h1>
