Switch to using colors variables to make consistency easier

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <!--</div>-->
         </div>
         
-        <div id="contact">
+        <div id="contact" class="whitebackground">
             <h2>Contact Information</h2> <!-- obfuscation method inspired by https://perishablepress.com/best-method-for-email-obfuscation/ -->
             <div class="row">
                 <div class="person" id="Abhi">
