Add rob icon as a test

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                     </div>
                 </div>
                 <div class="person" id="Rob">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+                    <img class="icon" src="https://avatars1.githubusercontent.com/u/25965766">
                     <div class="info">
                         <h3>Rob Budak</h3>
                         <a href="mailto:computerguy440@gmail.com">computerguy440@gmail.com</a>
