--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@
         
         <div class="patternbackground" id="sponsors">
             <h2>Sponsors</h2>
+            <div class="sponsorPics">
+                <img src="img/whiteMicrosoftLogo.png" alt="Microsoft">
+            </div>
             <div class="inner">
 				<center><p>Coming soon...</p></center>
                 <!--<div class="stat" style="text-align: right;padding-right: 100px;">
