--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,500,600,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700&display=swap" rel="stylesheet">
-		<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
         <!-- From https://realfavicongenerator.net/ -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=Lby8NkgPMz">
@@ -365,12 +365,31 @@
         
         <div class="patternbackground" id="sponsors">
             <h2>Sponsors</h2>
-            <div class="sponsorPics">
-                <img src="img/whiteMicrosoftLogo.png" alt="Microsoft">
+            <div style="width: 50%; height: 50%; margin-left: 25%">
+                <div>
+                    <div class="row mx-md-n5" style="display: flex; justify-content: center">
+                        <div class="col px-md-5">
+                            <img src="img/microsoftLogo.png" alt="Microsoft" style="width: 100%; height: 100%;">
+                        </div>
+                        <div class="col px-md-5">
+                            <img src="img/balsamiq-logo-screen.svg" alt="Balsamiq" style="width: 100%; height: 100%;">
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="row mx-md-n5" style="display: flex; justify-content: center">
+                        <div class="col px-md-5">
+                            <img src="img/twilio-logo-red.svg" alt="Twilio" style="width: 100%; height: 100%;">
+                        </div>
+                        <div class="col px-md-5" style="display: flex; justify-content: center;">
+                            <img src="img/mcDonaldsWordmark.png" alt="McDonald's" style="width: 100%; height: 45%;">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="inner">
 			<!--Microsoft, Twillio?, -->
-				<center><p>Coming soon...</p></center>
                 <!--<div class="stat" style="text-align: right;padding-right: 100px;">
                     <h3>110+</h3>
                     <p class="subtitle">Total Participants</p>
@@ -396,14 +415,14 @@
         <div id="contact" class="whitebackground">
             <h2>Contact Information</h2> <!-- obfuscation method inspired by https://perishablepress.com/best-method-for-email-obfuscation/ -->
             <div class="row">
-                <div class="person" id="Abhi">
+                <div class="person col" id="Abhi" >
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Abhi Thosar</h3>
                         <a href="mailto:athosar1452@gmail.com">athosar1452@gmail.com</a>
                     </div>
                 </div>
-                <div class="person" id="Rob">
+                <div class="person col" id="Rob">
                     <img class="icon" src="https://avatars1.githubusercontent.com/u/25965766">
                     <div class="info">
                         <h3>Rob Budak</h3>
@@ -412,14 +431,14 @@
                 </div>
             </div>
             <div class="row">
-				<div class="person" id="Pavan">
+				<div class="person col" id="Pavan">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Pavan Pandurangi</h3>
                         <a href="mailto:pandurangi1381@students.d211.org">pandurangi1381@students.d211.org</a>
                     </div>
                 </div>
-                <div class="person" id="Saagar">
+                <div class="person col" id="Saagar">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Saagar Patel</h3>
@@ -428,14 +447,14 @@
                 </div>
             </div>
 			<div class="row">
-				<div class="person" id="Armaan">
+				<div class="person col" id="Armaan">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Armaan Gupta</h3>
                         <a href="mailto:guppythegod@kreative.im">guppythegod@kreative.im</a>
                     </div>
                 </div>
-                <div class="person" id="Arnav">
+                <div class="person col" id="Arnav">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Arnav Batta</h3>
@@ -444,30 +463,30 @@
                 </div>
 			</div>
 			<div class="row">
-				<div class="person" id="Emeka">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Emeka Ezike</h3>
-                        <a href="mailto:ezics.729@gmail.com">ezics.729@gmail.com</a>
-                    </div>
-                </div>
-				<div class="person" id="Joe">
+				<div class="person col" id="Joe">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Joe Marcantonio</h3>
                         <a href="mailto:jmarcantonio@stdl.org">jmarcantonio@stdl.org</a>
                     </div>
                 </div>
+                <div class="person col" id="Emeka">
+                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+                    <div class="info">
+                        <h3>Emeka Ezike</h3>
+                        <a href="mailto:ezics.729@gmail.com">ezics.729@gmail.com</a>
+                    </div>
+                </div>
 			</div>
 			<div class="row">
-				<div class="person" id="Anthony">
+				<div class="person col" id="Anthony">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Anthony Navarrete</h3>
                         <a href="mailto:anavarrete@stdl.org">anavarrete@stdl.org</a>
                     </div>
                 </div>
-				<div class="person" id="Example">
+				<div class="person col" id="Example">
                     <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
                     <div class="info">
                         <h3>Extra PersonSlot</h3>
