--- a/index.html
+++ b/index.html
@@ -386,6 +386,16 @@
                             <img src="img/mcDonaldsWordmark.png" alt="McDonald's" style="width: 100%; height: 45%;">
                         </div>
                     </div>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="row mx-md-n5" style="display: flex; justify-content: center">
+                        <div class="col px-md-5">
+                            <a href="http://www.18techventures.com/">
+                                <img src="img/18Tech%20Ventures%20Logo%20Light%20Theme.png" alt="18Tech Ventures" style="width: 50%; height: 100%;">
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="inner">
