--- a/index.html
+++ b/index.html
@@ -369,10 +369,14 @@
                 <div>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
-                            <img src="img/microsoftLogo.png" alt="Microsoft" style="width: 100%; height: 100%;">
+                            <a href="https://www.microsoft.com/en-us/store/locations/il/schaumburg/woodfield-mall/store-36">
+                                <img src="img/microsoftLogo.png" alt="Microsoft" style="width: 100%; height: 100%;">
+                            </a>
                         </div>
                         <div class="col px-md-5">
-                            <img src="img/balsamiq-logo-screen.svg" alt="Balsamiq" style="width: 100%; height: 100%;">
+                            <a href="https://balsamiq.com/">
+                                <img src="img/balsamiq-logo-screen.svg" alt="Balsamiq" style="width: 100%; height: 100%;">
+                            </a>
                         </div>
                     </div>
                     <br>
@@ -380,10 +384,14 @@
                     <br>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
-                            <img src="img/twilio-logo-red.svg" alt="Twilio" style="width: 100%; height: 100%;">
+                            <a href="https://www.twilio.com/">
+                                <img src="img/twilio-logo-red.svg" alt="Twilio" style="width: 100%; height: 100%;">
+                            </a>
                         </div>
                         <div class="col px-md-5" style="display: flex; justify-content: center;">
-                            <img src="img/mcDonaldsWordmark.png" alt="McDonald's" style="width: 100%; height: 45%;">
+                            <a href="https://www.mcdonalds.com/us/en-us.html">
+                                <img src="img/mcDonaldsWordmark.png" alt="McDonald's" style="width: 100%; height: 45%;">
+                            </a>
                         </div>
                     </div>
                     <br>
@@ -392,7 +400,12 @@
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
                             <a href="http://www.18techventures.com/">
-                                <img src="img/18Tech%20Ventures%20Logo%20Light%20Theme.png" alt="18Tech Ventures" style="width: 50%; height: 100%;">
+                                <img src="img/18Tech%20Ventures%20Logo%20Light%20Theme.png" alt="18Tech Ventures" style="width: 80%; height: 100%;">
+                            </a>
+                        </div>
+                        <div class="col px-md-5">
+                            <a href="https://www.servercentral.com/">
+                                <img src="img/sctg%20blue.jpg" alt="Server Central" style="width: 190%; height: 65%;">
                             </a>
                         </div>
                     </div>
