--- a/index.html
+++ b/index.html
@@ -369,6 +369,13 @@
                 <div>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
+                            <a href="https://balsamiq.com/">
+                                <img src="img/STDL-001%20Logo_gray-orange.svg" alt="STDL" style="width: 100%; height: 100%;">
+                            </a>
+                    </div>
+                    </div>
+                    <div class="row mx-md-n5" style="display: flex; justify-content: center">
+                        <div class="col px-md-5">
                             <a href="https://www.microsoft.com/en-us/store/locations/il/schaumburg/woodfield-mall/store-36">
                                 <img src="img/microsoftLogo.png" alt="Microsoft" style="width: 100%; height: 100%;">
                             </a>
