--- a/index.html
+++ b/index.html
@@ -369,14 +369,17 @@
                 <div>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
-                            <a href="https://balsamiq.com/">
-                                <img src="img/STDL-001%20Logo_gray-orange.svg" alt="STDL" style="width: 100%; height: 100%;">
+                            <a href="https://www.microsoft.com/en-us/store/locations/il/schaumburg/woodfield-mall/store-36">
+                                <img src="img/stdlLogo.svg" alt="STDL">
                             </a>
+                        </div>
                     </div>
-                    </div>
+                    <br>
+                    <br>
+                    <br>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
-                            <a href="https://www.microsoft.com/en-us/store/locations/il/schaumburg/woodfield-mall/store-36">
+                            <a href="https://www.schaumburglibrary.org/">
                                 <img src="img/microsoftLogo.png" alt="Microsoft" style="width: 100%; height: 100%;">
                             </a>
                         </div>
