added link to STDL on logo

--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
                 <div>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
-                            <a href="https://www.microsoft.com/en-us/store/locations/il/schaumburg/woodfield-mall/store-36">
-                                <img src="img/stdlLogo.svg" alt="STDL">
+                            <a href="https://www.schaumburglibrary.org/">
+                                <img src="img/logo.svg" alt="STDL">
                             </a>
                         </div>
                     </div>
