Change extra person slot to "contact the team" email. Add STDL icons to corresponding people

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 			</div>
 			<div class="row">
 				<div class="person col" id="Joe">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+                    <img class="icon" src="img/stdlLogo_noText.svg">
                     <div class="info">
                         <h3>Joe Marcantonio</h3>
                         <a href="mailto:jmarcantonio@stdl.org">jmarcantonio@stdl.org</a>
@@ -513,17 +513,17 @@
 			</div>
 			<div class="row">
 				<div class="person col" id="Anthony">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+                    <img class="icon" src="img/stdlLogo_noText.svg">
                     <div class="info">
                         <h3>Anthony Navarrete</h3>
                         <a href="mailto:anavarrete@stdl.org">anavarrete@stdl.org</a>
                     </div>
                 </div>
 				<div class="person col" id="Example">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+                    <img class="icon" src="img/stdlLogo_noText.svg">
                     <div class="info">
-                        <h3>Extra PersonSlot</h3>
-                        <a href="mailto:example@example.com">example@example.com</a>
+                        <h3>Contact the Team!</h3>
+                        <a href="mailto:hackstl@stdl.org">hackstl@stdl.org</a>
                     </div>
                 </div>
 			</div>
