Remove fixed rows and "col" class to prevent page from gaining scroll bar

--- a/index.html
+++ b/index.html
@@ -460,86 +460,76 @@
         </div>
         
         <div id="contact" class="whitebackground">
-            <h2>Contact Information</h2> <!-- obfuscation method inspired by https://perishablepress.com/best-method-for-email-obfuscation/ -->
-            <div class="row">
-                <div class="person col" id="Abhi" >
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Abhi Thosar</h3>
-                        <a href="mailto:athosar1452@gmail.com">athosar1452@gmail.com</a>
-                    </div>
-                </div>
-                <div class="person col" id="Rob">
-                    <img class="icon" src="https://avatars1.githubusercontent.com/u/25965766">
-                    <div class="info">
-                        <h3>Rob Budak</h3>
-                        <a href="mailto:computerguy440@gmail.com">computerguy440@gmail.com</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-				<div class="person col" id="Pavan">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Pavan Pandurangi</h3>
-                        <a href="mailto:pandurangi1381@students.d211.org">pandurangi1381@students.d211.org</a>
-                    </div>
-                </div>
-                <div class="person col" id="Saagar">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Saagar Patel</h3>
-                        <a href="mailto:patel5210@students.d211.org">patel5210@students.d211.org</a>
-                    </div>
-                </div>
-            </div>
-			<div class="row">
-				<div class="person col" id="Armaan">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Armaan Gupta</h3>
-                        <a href="mailto:guppythegod@kreative.im">guppythegod@kreative.im</a>
-                    </div>
-                </div>
-                <div class="person col" id="Arnav">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Arnav Batta</h3>
-                        <a href="mailto:arnavbatta29@gmail.com">arnavbatta29@gmail.com</a>
-                    </div>
-                </div>
+            <h2>Contact Information</h2>
+			<div class="person" id="Abhi" >
+				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+				<div class="info">
+					<h3>Abhi Thosar</h3>
+					<a href="mailto:athosar1452@gmail.com">athosar1452@gmail.com</a>
+				</div>
 			</div>
-			<div class="row">
-				<div class="person col" id="Joe">
-                    <img class="icon" src="img/stdlLogo_noText.svg">
-                    <div class="info">
-                        <h3>Joe Marcantonio</h3>
-                        <a href="mailto:jmarcantonio@stdl.org">jmarcantonio@stdl.org</a>
-                    </div>
-                </div>
-                <div class="person col" id="Emeka">
-                    <!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
-                    <div class="info">
-                        <h3>Emeka Ezike</h3>
-                        <a href="mailto:ezics.729@gmail.com">ezics.729@gmail.com</a>
-                    </div>
-                </div>
+			<div class="person" id="Rob">
+				<img class="icon" src="https://avatars1.githubusercontent.com/u/25965766">
+				<div class="info">
+					<h3>Rob Budak</h3>
+					<a href="mailto:computerguy440@gmail.com">computerguy440@gmail.com</a>
+				</div>
 			</div>
-			<div class="row">
-				<div class="person col" id="Anthony">
-                    <img class="icon" src="img/stdlLogo_noText.svg">
-                    <div class="info">
-                        <h3>Anthony Navarrete</h3>
-                        <a href="mailto:anavarrete@stdl.org">anavarrete@stdl.org</a>
-                    </div>
-                </div>
-				<div class="person col" id="Example">
-                    <img class="icon" src="img/stdlLogo_noText.svg">
-                    <div class="info">
-                        <h3>Contact the Team!</h3>
-                        <a href="mailto:hackstl@stdl.org">hackstl@stdl.org</a>
-                    </div>
-                </div>
+			<div class="person" id="Pavan">
+				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+				<div class="info">
+					<h3>Pavan Pandurangi</h3>
+					<a href="mailto:pandurangi1381@students.d211.org">pandurangi1381@students.d211.org</a>
+				</div>
+			</div>
+			<div class="person" id="Saagar">
+				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+				<div class="info">
+					<h3>Saagar Patel</h3>
+					<a href="mailto:patel5210@students.d211.org">patel5210@students.d211.org</a>
+				</div>
+			</div>
+			<div class="person" id="Armaan">
+				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+				<div class="info">
+					<h3>Armaan Gupta</h3>
+					<a href="mailto:guppythegod@kreative.im">guppythegod@kreative.im</a>
+				</div>
+			</div>
+			<div class="person" id="Arnav">
+				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+				<div class="info">
+					<h3>Arnav Batta</h3>
+					<a href="mailto:arnavbatta29@gmail.com">arnavbatta29@gmail.com</a>
+				</div>
+			</div>
+			<div class="person" id="Joe">
+				<img class="icon" src="img/stdlLogo_noText.svg">
+				<div class="info">
+					<h3>Joe Marcantonio</h3>
+					<a href="mailto:jmarcantonio@stdl.org">jmarcantonio@stdl.org</a>
+				</div>
+			</div>
+			<div class="person" id="Emeka">
+				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
+				<div class="info">
+					<h3>Emeka Ezike</h3>
+					<a href="mailto:ezics.729@gmail.com">ezics.729@gmail.com</a>
+				</div>
+			</div>
+			<div class="person" id="Anthony">
+				<img class="icon" src="img/stdlLogo_noText.svg">
+				<div class="info">
+					<h3>Anthony Navarrete</h3>
+					<a href="mailto:anavarrete@stdl.org">anavarrete@stdl.org</a>
+				</div>
+			</div>
+			<div class="person" id="ContactTeam">
+				<img class="icon" src="img/stdlLogo_noText.svg">
+				<div class="info">
+					<h3>Contact the Team!</h3>
+					<a href="mailto:hackstl@stdl.org">hackstl@stdl.org</a>
+				</div>
 			</div>
         </div>
     </body>
