added react dashboard, made it interm, deleted REST APIs

--- a/index.html
+++ b/index.html
@@ -256,14 +256,16 @@
                 </div>
 
                 <div class="workshop card">
-                    <h3>REST APIs</h3>
+                    <h3>React Dashboard</h3>
                     <a class="see-more" onclick="openWorkshop(this)">See More</a>
                     <hr class="horiz-spacer"></hr>
-                    <p class="hidden"><i>Saturday, 12:30pm - 1:30pm</i></p>
+                    <p class="hidden"><i>Friday, 1:30pm - 2:30pm</i></p>
                     <p class="hidden workshop-hosts"><i>Run by Abhi</i></p>
                     <p class="hidden">
-						Description coming soon - stay tuned for more info.
-					</p>
+                        Create a personal dashboard with news, weather, and more using React and Next.js!
+                        <br/><br/>
+                        Software used: Repl.it, no downloads needed
+                    </p>
                     <hr class="hidden horiz-spacer"></hr>
                     <div class="difficulty">
                         <p class="intermediate">Intermediate Level</p>
@@ -286,23 +288,7 @@
                         <p class="advanced">Advanced Level</p>
                     </div>
                 </div>
-				
-				<div class="workshop card">
-                    <h3>React Dashboard</h3>
-                    <a class="see-more" onclick="openWorkshop(this)">See More</a>
-                    <hr class="horiz-spacer"></hr>
-                    <p class="hidden"><i>Friday, 1:30pm - 2:30pm</i></p>
-                    <p class="hidden workshop-hosts"><i>Run by Abhi</i></p>
-                    <p class="hidden">
-                        Description coming soon.
-						<br/><br/>
-						Software used: Coming soon.
-                    </p>
-                    <hr class="hidden horiz-spacer"></hr>
-                    <div class="difficulty">
-                        <p class="advanced">Advanced Level</p>
-                    </div>
-                </div>
+
 				
 				<div class="workshop card">
                     <h3>Machine Learning 2: Basic Classification</h3>
