Add remind link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<a href="#schedule">Schedule</a>
 			<a href="./files">Workshop Files</a>
 			<a href="#contact">Contact Us</a>
+			<a href = "https://www.remind.com/join/hackst">Join Remind</a>
 			<!--<a href="./projects">Participant Projects</a>-->
 			<!--<a href="./photos">Photos</a>-->
 		</nav>
