added prize categories

--- a/index.html
+++ b/index.html
@@ -341,8 +341,24 @@
                     </div>
                 </div>
             </div>
-			
-			</div>
+
+            <div style="display: flex; justify-content: center">
+                <h1 style="font-size: 2.5rem; color: white;">Prize Categories</h1>
+            </div>
+            <div style="display: flex; justify-content: center">
+                <h4>This is how you will be judged!</h4>
+            </div>
+
+
+            <div style="display: flex; justify-content: center;">
+                <nav class="nav nav-pills">
+                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: coral">Best Beginner</a>
+                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: green">Best Game</a>
+                    <a class="nav-item nav-link active" style="margin: 10vh; width: 30vh; text-align: center">Best Overall</a>
+                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: brown">Most Practical</a>
+                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: dimgrey">Best Design</a>
+                </nav>
+            </div>
             
         </section>
 
