Remove map section since we probably won't be using it

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 
         <section id="map_section" class="patternbackground">
 
-            <div id="map" class="container">
+            <!--<div id="map" class="container">
 				<h1 style="font-size: 2.5rem; color: white;">Event Map</h1>
 				<center><p>Coming soon...</p></center>
-                <!--<img width=80% src="https://docs.google.com/drawings/d/e/2PACX-1vRfnMJ6_nFTzHt8MST_3XC7MUnEIcUw0Vi-9MKR9eGuHYFdH85NwFX0UvdwVWzuQZa3ZheLkk3F2PP3/pub?w=1440&amp;h=1080">-->
-            </div>
+                --><!--<img width=80% src="https://docs.google.com/drawings/d/e/2PACX-1vRfnMJ6_nFTzHt8MST_3XC7MUnEIcUw0Vi-9MKR9eGuHYFdH85NwFX0UvdwVWzuQZa3ZheLkk3F2PP3/pub?w=1440&amp;h=1080">-->
+            <!--</div>-->
             
             <br/>
 			
