Switch Pavan's email to be shorter

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 				<!--<img class="icon" src="img/fremd.png">--> <!--Replace with college images??-->
 				<div class="info">
 					<h3>Pavan Pandurangi</h3>
-					<a href="mailto:pandurangi1381@students.d211.org">pandurangi1381@students.d211.org</a>
+					<a href="mailto:pavancswork@gmail.com">pavancswork@gmail.com</a>
 				</div>
 			</div>
 			<div class="person" id="Saagar">
