--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
 		<nav id="links" style="display: flex; align-items: center">
 			<img src="hack-stl-logo_white.svg" style="width: 10%; height: 5%; float: left">
-			<a href="#map">Map</a>
+			<!--<a href="#map">Map</a>-->
 			<a href="#schedule">Schedule</a>
 			<a href="./files">Workshop Files</a>
 			<a href="#contact">Contact Us</a>
