Switch to bootstrap row/col for navbar to accomodate more/less items
Thank you Abhi

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     </head>
 
     <body>
-		<nav id="links" style="display: flex; align-items: center">
-			<img src="hack-stl-logo_white.svg" style="width: 10%; height: 5%; float: left">
-			<!--<a href="#map">Map</a>-->
-			<a href="#schedule">Schedule</a>
-			<a href="./files">Workshop Files</a>
-			<a href="#contact">Contact Us</a>
-			<a href = "https://www.remind.com/join/hackst">Join Remind</a>
-			<!--<a href="./projects">Participant Projects</a>-->
-			<!--<a href="./photos">Photos</a>-->
+		<nav class="row" id="links" style="display: flex; align-items: center; margin: 0;">
+			<img class="col" src="hack-stl-logo_white.svg" style="width: 10%; height: 5%; float: left">
+			<!--<a class="col" href="#map">Map</a>-->
+			<a class="col" href="#schedule">Schedule</a>
+			<a class="col" href="./files">Workshop Files</a>
+			<a class="col" href="#contact">Contact Us</a>
+			<a class="col" href = "https://www.remind.com/join/hackst">Join Remind</a>
+			<!--<a class="col" href="./projects">Participant Projects</a>-->
+			<!--<a class="col" href="./photos">Photos</a>-->
 		</nav>
 
         <section id="section1" class="patternbackground">
