--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
 		<nav class="row" id="links" style="display: flex; align-items: center; margin: 0;">
-			<img class="col" src="hack-stl-logo_white.svg" style="width: 10%; height: 5%; float: left">
+			<img class="col" src="hack-stl-logo_white.svg" style="width: 10%; float: left">
 			<!--<a class="col" href="#map">Map</a>-->
 			<a class="col" href="#schedule">Schedule</a>
 			<a class="col" href="./files">Workshop Files</a>
@@ -410,9 +410,9 @@
                             </a>
                         </div>
                     </div>
-                    <br>
-                    <br>
-                    <br>
+                    <br/>
+                    <br/>
+                    <br/>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
                             <a href="https://www.schaumburglibrary.org/">
@@ -425,9 +425,9 @@
                             </a>
                         </div>
                     </div>
-                    <br>
-                    <br>
-                    <br>
+                    <br/>
+                    <br/>
+                    <br/>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
                             <a href="https://www.twilio.com/">
@@ -440,9 +440,9 @@
                             </a>
                         </div>
                     </div>
-                    <br>
-                    <br>
-                    <br>
+                    <br/>
+                    <br/>
+                    <br/>
                     <div class="row mx-md-n5" style="display: flex; justify-content: center">
                         <div class="col px-md-5">
                             <a href="http://www.18techventures.com/">
@@ -457,8 +457,7 @@
                     </div>
                 </div>
             </div>
-            <div class="inner">
-			<!--Microsoft, Twillio?, -->
+            <div id ="endingstats" class="inner">
                 <!--<div class="stat" style="text-align: right;padding-right: 100px;">
                     <h3>110+</h3>
                     <p class="subtitle">Total Participants</p>
