Give award categories a shadow

--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
 
 
             <div style="display: flex; justify-content: center;">
-                <nav class="nav nav-pills">
-                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: coral">Best Beginner</a>
-                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: green">Best Game</a>
-                    <a class="nav-item nav-link active" style="margin: 10vh; width: 30vh; text-align: center">Best Overall</a>
-                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: brown">Most Practical</a>
-                    <a class="nav-item nav-link active" style="margin: 10vh; background-color: dimgrey">Best Design</a>
+                <nav id="award-categories" class="nav nav-pills">
+                    <a class="nav-item nav-link active" style=" background-color: coral">Best Beginner</a>
+                    <a class="nav-item nav-link active" style="background-color: green">Best Game</a>
+                    <a class="nav-item nav-link active" style="text-align: center">Best Overall</a>
+                    <a class="nav-item nav-link active" style="background-color: brown">Most Practical</a>
+                    <a class="nav-item nav-link active" style="background-color: dimgrey">Best Design</a>
                 </nav>
             </div>
             
