--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=Lby8NkgPMz">
         <link rel="manifest" href="/site.webmanifest?v=Lby8NkgPMz">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg?v=Lby8NkgPMz" color="#fc7c04">
-		<link rel="shortcut icon" href="/favicon.ico?v=Lby8NkgPMz">
+		<link rel="shortcut icon" href="favicon.ico?v=Lby8NkgPMz">
 		<meta name="msapplication-TileColor" content="#fc7c04">
 		<meta name="theme-color" content="#fc7c04">
         <!-- End from https://realfavicongenerator.net/ --> 
