Enable Participant Projects link, disable Remind Join link, disable sign up button.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<a class="col" href="#schedule">Schedule</a>
 			<a class="col" href="./files">Workshop Files</a>
 			<a class="col" href="#contact">Contact Us</a>
-			<a class="col" href = "https://www.remind.com/join/hackst">Join Remind</a>
-			<!--<a class="col" href="./projects">Participant Projects</a>-->
+			<!--<a class="col" href = "https://www.remind.com/join/hackst">Join Remind</a>-->
+			<a class="col" href="./projects">Participant Projects</a>
 			<!--<a class="col" href="./photos">Photos</a>-->
 		</nav>
 
@@ -54,9 +54,9 @@
                 </div>
 
                 <div style="display: flex; justify-content: center; align-items: center">
-                    <noscript><a href="https://www.eventbrite.com/e/hackstl-registration-61588245099" rel="noopener noreferrer" target="_blank"/></noscript>
+                    <!--<noscript><a href="https://www.eventbrite.com/e/hackstl-registration-61588245099" rel="noopener noreferrer" target="_blank"/></noscript>-->
                     <!-- You can customize this button any way you like -->
-                    <button id="eventbrite-widget-modal-trigger-61588245099" type="button" class="round-btn">Register</button>
+                    <!--<button id="eventbrite-widget-modal-trigger-61588245099" type="button" class="round-btn">Register</button>
                     <noscript></a>Buy Tickets on Eventbrite</noscript>
 
                     <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
@@ -73,7 +73,8 @@
                             modalTriggerElementId: 'eventbrite-widget-modal-trigger-61588245099',
                             onOrderComplete: exampleCallback
                         });
-                    </script>
+                    </script>-->
+					<button id="eventbrite-widget-modal-trigger-61588245099" type="button" class="round-btn" style="width: 30vh">See you next year!</button>
                 </div>
 
             </div>
