Move prize category announcements up and add winning projects

--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
                     <!--<span>From <a href="https://www.google.com/search?q=define+hackathon" target="_blank">Google</a></span>-->
                 <!--</div>-->
             </div>
+			
+			<div style="display: flex; justify-content: center">
+                <h1 style="font-size: 2.5rem; color: white;">Prize Categories</h1>
+            </div>
+            <div style="display: flex; justify-content: center; color: var(--page-white)">
+                <h4>Congratulations! We will contact you to arrange delivery of your prizes soon.</h4>
+            </div>
+
+
+            <div style="display: flex; justify-content: center;">
+                <nav id="award-categories" class="nav nav-pills">
+                    <a class="nav-item nav-link active" style=" background-color: coral">Best Beginner: Magical Mathematical Game</a>
+                    <a class="nav-item nav-link active" style="background-color: green">Best Game: Hero's Adventure</a>
+                    <a class="nav-item nav-link active" style="text-align: center">Best Overall: Navity</a>
+                    <a class="nav-item nav-link active" style="background-color: brown">Most Practical: New Trier Navigation</a>
+                    <a class="nav-item nav-link active" style="background-color: dimgrey">Best Design: Cosmic Striker</a>
+                </nav>
+            </div>
+			<br/>
+			<br/>
+
         </section>
         
         <section id="schedule" class="whitebackground">
@@ -344,24 +365,6 @@
                         <p class="advanced">Advanced Level</p>
                     </div>
                 </div>
-            </div>
-
-            <div style="display: flex; justify-content: center">
-                <h1 style="font-size: 2.5rem; color: white;">Prize Categories</h1>
-            </div>
-            <div style="display: flex; justify-content: center">
-                <h4>This is how you will be judged!</h4>
-            </div>
-
-
-            <div style="display: flex; justify-content: center;">
-                <nav id="award-categories" class="nav nav-pills">
-                    <a class="nav-item nav-link active" style=" background-color: coral">Best Beginner</a>
-                    <a class="nav-item nav-link active" style="background-color: green">Best Game</a>
-                    <a class="nav-item nav-link active" style="text-align: center">Best Overall</a>
-                    <a class="nav-item nav-link active" style="background-color: brown">Most Practical</a>
-                    <a class="nav-item nav-link active" style="background-color: dimgrey">Best Design</a>
-                </nav>
             </div>
             
         </section>
