Embed event video and clarify end date

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                         <div class="info-container" style="display: inline-block;">
                             <p class="super-title">When</p>
-                            <h2>August 9th and 10th</h2>
+                            <h2>August 9th and 10th, 2019</h2>
                         </div>
 
                         <div class="info-container" style="display: inline-block">
@@ -76,6 +76,8 @@
                     </script>-->
 					<button id="eventbrite-widget-modal-trigger-61588245099" type="button" class="round-btn" style="width: 30vh">See you next year!</button>
                 </div>
+
+				<div style="padding: 5vh;"><iframe width="100%" height="500" src="https://www.youtube.com/embed/TiIt0VGWoNs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="box-shadow: 10px 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);"></iframe></div>
 
             </div>
 
