--- a/index.html
+++ b/index.html
@@ -456,6 +456,16 @@
                             </a>
                         </div>
                     </div>
+					<br/>
+					<br/>
+					<br/>
+					<div class="row mx-md-n5" style="display: flex; justify-content: center">
+                        <div class="col px-md-5">
+                            <a href="https://www.linode.com/">
+                                <img src="img/linode-logo_standard_light_large.png" alt="Linode" style="width: 70%;">
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id ="endingstats" class="inner">
